mail method finished

--- a/App.config
+++ b/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	
+	<appSettings>
+		<add key="email" value="rbadri7501@gmail.com;badrinarayanan7501@gmail.com;badri@yahoo.com" />
+	</appSettings>
 </configuration>
