--- a/App.config
+++ b/App.config
@@ -1,10 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	
 	<appSettings>
+		<add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
 		<add key="email" value="rbadri7501@gmail.com;badrinarayanan7501@gmail.com;badri@yahoo.com" />
+		<add key="attachDownload" value="E:\Studies\MCA\Semester 4\Philips\Mail Docs\" />
+		<add key="baseFoldPath" value="E:\Studies\MCA\Semester 4\Philips\Base Files\" />
+		<add key="billCol" value="Bill Columns.xlsx"/>
+		<add key="eliFile" value="Eligibility File.xlsx"/>
+		<add key="baseFile" value ="Base File.xlsx"/>
 	</appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
