--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="EPPlus" version="6.2.2" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Outlook" version="15.0.4797.1004" targetFramework="net472" />
+  <package id="PdfPig" version="0.1.6" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Tabula" version="0.1.3" targetFramework="net472" />
 </packages>
